# distributed_storage

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePreset.json  CMakeUserPresets.json  LICENSE  README.md  conanfile.py  http_server.cpp  main.cpp
.devcontainer/: devcontainer.json
.github/workflows/: build.yaml  docker_build_and_deploy.yaml
docker/: .env  .zshrc  Dockerfile  Dockerfile.extended  docker-compose.extended.yml  docker-compose.yml
docker/base/: Dockerfile  conanprofile  docker-compose.yml  ubuntu.sources.list
include/: app.h  base_storage.h  config.h  launcher.h  listener.h  router.h  storage.h  storage_router_adapter.h  string_storage.h  types.h  value.h  wal_logger.h
include/async/: awaitable.h  promise.h  task.h
include/cli/: launcher.h
include/logger/: logger.h
include/middleware/: log_middleware.h  middleware.h
include/network/: http_codes.h  request.h  response.h  router.h  session.h  types.h
include/storage/: storage.h  storage_router_adapter.h  utils.h  value.h  wal_logger.h
src/: app.cpp  baseStorage.cpp  base_storage.cpp  config.cpp  launcher.cpp  listener.cpp  storage.cpp  storage_router_adapter.cpp  string_storage.cpp  wal_logger.cpp
src/cli/: launcher.cpp
src/logger/: logger.cpp
tests/: CMakeLists.txt  run_integration_tests.py  test_app.cpp  test_config.cpp  test_example.cpp  test_network_types.cpp  test_request.cpp  test_router.cpp  test_storage.cpp  test_value.cpp  test_wallogger.cpp
tests/integration/: conftest.py  test_api.py
tests/test_data/: test_config.json
(+9 files in other folders)
